# UAAG2

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARRAY_JOB_GUIDE.md  CHANGES_SUMMARY.md  CLEANUP_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MIGRATION_HYDRA.md  PIPELINE_USAGE.md  QUICKSTART_HYDRA.md  QUICKSTART_LOAD_TESTING.md  README.md  SCRIPT_CATALOG.md  SETUP_SUMMARY.md  SUMMARY_HYDRA_MIGRATION.md  cleanup_mol_files.sh  cleanup_mol_files_array.sh  cleanup_summary.sh  compare_ctmc_ddpm.sh  extract_pdb_water.sh  flagship_model_cards.md  flake.nix  graph_check.py  install_rocm.sh  link_model.py  posebuster_array.sh  posebuster_test.sh  posebuster_test_interactive.sh  posebuster_testiter0.sh  posebuster_testiter2.sh  pyproject.toml  quick_reference.sh  read_lmdb_test.py  read_lmdb_test.sh  requirements.txt  run_assay_array.sh  run_assay_postprocess.sh  (+47 more)
.github/prompts/: add_test.prompt.md
.github/workflows/: deploy.yaml  deploy.yml  deploy_api.yaml  hf_data_report.yaml  lint.yaml  linting.yaml  load_test.yaml  pre-commit.yaml  stage_model.yaml  test.yaml  tests.yaml  tests_and_build.yaml  train.yaml
UAAG_model/: hparams.yaml
configs/: cloudbuild.yaml  cloudbuild_api.yaml  train.yaml  vertex.yaml
configs/data/: default.yaml
configs/diffusion/: default.yaml
configs/experiment/: production.yaml  quick_test.yaml
configs/model/: default.yaml
configs/optimizer/: adam.yaml  sgd.yaml
data/: aa_graph.json  statistic.pkl
dockerfiles/: api.dockerfile  evaluate.dockerfile  evaluate_gpu.dockerfile  mnist_evaluate.dockerfile  mnist_train.dockerfile  train.dockerfile  train_gpu.dockerfile
docs/: HYDRA_CONFIG.md  LOAD_TESTING.md  ROCM_INSTALLATION.md
docs/source/: index.md
eval/: PIPELINE.md  RUNBOOK.md  finalize_and_plot.sh  finalize_and_plot_hendrix.sh  make_modeldata.py  models.tsv  models_hendrix.tsv  run_eval.sh  run_eval_hendrix.sh  run_pipeline.sh  run_pipeline_hendrix.sh  slurm_sample.sh  slurm_sample_hendrix.sh
old/: DN7A_SACS2.fasta  MAC_DEVELOPMENT.md  SETUP.md  activate_mac.sh  graph_check.py  read_pharmo.py  run_full_pipeline.sh
old/scripts/: amino_acid_graph.py  argparse_test.py  construct_naa_data_group.py  construct_pocket_eqgat_exclude_aa.py  coverage_study.ipynb  generate_ligand.py  generate_ligand_prior.py  pdb_clean.py  post_analysis.py  slurm_config.ipynb  spearmen_corr_check.py
old/slurm_config/: slurm_config_addition.txt  slurm_config_proteingym.txt  slurm_config_repeat.txt
old/uaag/: losses.py  utils.py
old/uaag/data/: uaag_dataset.py
old/uaag/diffusion/: continuous.py
old/uaag/e3moldiffusion/: coordsatomsbonds.py  modules.py
reports/: API_TESTING.md  LOAD_TESTING_SUMMARY.md  README.md
scripts/: ablation_compare.ipynb  aggregate_splits.py  api_example.py  baseline_plot.ipynb  baseline_plot_addition.ipynb  build_eqgat_lmdb_from_pdb.py  build_ncaa_lmdb.py  build_pdbbind_lmdb.py  check_benchmarks.py  compare_ctmc_vs_ddpm.py  compare_models.py  construct_aa_eqgat.py  construct_aaclbr_data_group.py  construct_data.py  construct_data_group.py  construct_data_group_pt.py  construct_dictionary.py  construct_naa_data_group.py  construct_pdbbind_eqgat.py  construct_pocket_eqgat.py  construct_pocket_eqgat_adj.py  convert_lmdb.py  convert_lmdb_test.py  coverage_study.ipynb  dataset_size_check.py  dataset_test.py  demo_direct.py  demo_pdb_dataset.py  diagnose2.py  diagnose_mismatch.py  diagnose_pdbbind.py  download_pdb.py  enumerate_pdb_atom_types.py  evaluate_mol_samples.py  generate_clean_plots.py  generate_comparison_plots.py  generate_ligand.py  generate_ligand_2.py  generate_ligand_dpm.py  generate_ncaa_coverage.py  (+33 more)
scripts/example_data/v03_compare/: p0203_ctmc_modeldata.csv  v0.3ring_base_modeldata.csv  v0.3ring_cont_modeldata.csv  v0.3weighted_end_modeldata.csv
scripts/legacy/: README.md  generate_desktop_compare_reports.py
scripts/ncaa_ddg/: README.md  approach_a_rosetta.py  approach_b_rosetta_am1.py  approach_c_openmm.py  ncaa_smiles.py  submit_ncaa_benchmarks.sh  submit_ncaa_benchmarks.sh.bak
slurm/: submit_ctmc_20nfe_eval.sh  submit_prior_ctmc_1k_5iter.sh  submit_prior_ddpm_300_3iter.sh
slurm_config/: slurm_config.txt  slurm_config_proteingym.txt
slurm_config/assays/: A0A247D711_LISMN.txt  AICDA_HUMAN.txt  ARGR_ECOLI.txt  B2L11_HUMAN.txt  CCDB_ECOLI.txt  DLG4_RAT.txt  DN7A_SACS2.txt  ENVZ_ECOLI.txt  ENV_HV1B9.txt  ERBB2_HUMAN.txt  FKBP3_HUMAN.txt  HCP_LAMBD.txt  IF1_ECOLI.txt  ILF3_HUMAN.txt  OTU7A_HUMAN.txt  PKN1_HUMAN.txt  README.md  RS15_GEOSE.txt  SBI_STAAM.txt  SCIN_STAAR.txt  SOX30_HUMAN.txt  SQSTM_MOUSE.txt  SUMO1_HUMAN.txt  TAT_HV1BR.txt  VG08_BPP22.txt  VRPI_BPT7.txt
src/uaag2/: __init__.py  api.py  bond_analyze.py  data.py  equivariant_diffusion.py  evaluate.py  hf_data_report.py  logging_config.py  losses.py  mnist_data.py  mnist_evaluate.py  mnist_train.py  model.py  train.py  utils.py
src/uaag2/callbacks/: ema.py
src/uaag2/configs/: datasets_config.py
src/uaag2/data/: __init__.py  abstract_dataset.py  uaag_dataset.py
src/uaag2/datasets/: __init__.py  abstract_dataset.py  pdb_dataset.py  uaag_dataset.py
src/uaag2/diffusion/: categorical.py  continuous.py
src/uaag2/e3moldiffusion/: chem.py  convs.py  coordsatomsbonds.py  gnn.py  modules.py  molfeat.py
src/uaag2/scripts/: construct_pocket_eqgat.py  result_analysis.py  result_eval_uniform.py  result_eval_uniform_uaa.py  run_train.py
src/uaag2/static/: index.html
tests/: test_api.py  test_data.py  test_hf_data_report.py  test_model.py
tests/performancetests/: README.md  __init__.py  locustfile.py  test_model.py
uaag/: equivariant_diffusion.py  losses.py  utils.py
uaag/data/: uaag_dataset.py
uaag/diffusion/: categorical.py
uaag/e3moldiffusion/: convs.py  coordsatomsbonds.py  gnn.py
