[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "uaag2"
version = "0.0.1"
description = "protein diffusion"
authors = [
  { name = "Han Tang", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "fastapi==0.115.6",
    "huggingface-hub[cli]>=1.3.1",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "omegaconf>=2.3.0",
    "openbabel-wheel>=3.1.1.22",
    "pandas>=2.3.3",
    "posebusters>=0.6.3",
    "py3dmol>=2.5.3",
    "pytorch-lightning==2.6.0",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    # Pinned to 2.7.1, which is compatible with 2.7.0 wheels
    "torch==2.7.1",
    "torch-cluster>=1.6.3",
    "torch-ema>=0.3",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "tqdm>=4.67.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.14.11",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "ipython>=9.9.0",
    "huggingface-hub[cli]>=1.3.1",
    "google-api-python-client>=2.188.0",
]

# --- CONFIGURATION ---

# 1. Main PyTorch Index (This is a proper repository, so it stays in [[index]])
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# 2. PyTorch Geometric "Find Links" (CRITICAL FIX)
# We moved this from [[index]] to find-links because it is a flat HTML page.
[tool.uv]
find-links = [
  "https://data.pyg.org/whl/torch-2.7.0+cpu.html"
]

# --- SOURCE MAPPINGS ---

[tool.uv.sources]
# Force torch to use the CPU index
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

# NOTE: We REMOVED the specific sources for torch-cluster/sparse/etc.
# Since 'find-links' is global, uv will automatically find the wheels there
# without needing explicit source pinning for each package.
