[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "uaag2"
version = "0.0.1"
description = "protein diffusion"
authors = [
  { name = "Han Tang", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "biopython>=1.86",
    "fastapi==0.115.6",
    "huggingface-hub[cli]>=1.3.1",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "omegaconf>=2.3.0",
    "openbabel-wheel>=3.1.1.22",
    "pandas>=2.3.3",
    "posebusters>=0.6.3",
    "py3dmol>=2.5.3",
    "pytorch-lightning==2.6.0",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb==0.23.0",
    "loguru>=0.7.0",

    "torch==2.7.0",
    "torch-ema>=0.3",
    "torch-geometric>=2.7.0",

    # Platform-specific wheels for PyG extensions to match PyTorch versions
    # Mac (ARM/Intel): Clean CPU versions
    "torch-cluster==1.6.3; sys_platform == 'darwin'",
    "torch-scatter==2.1.2; sys_platform == 'darwin'",
    "torch-sparse==0.6.18; sys_platform == 'darwin'",
    "torch-spline-conv==1.2.2; sys_platform == 'darwin'",

    # Linux ARM (Docker CPU): CPU versions with +pt27cpu suffix
    "torch-cluster==1.6.3+pt27cpu; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "torch-scatter==2.1.2+pt27cpu; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "torch-sparse==0.6.18+pt27cpu; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "torch-spline-conv==1.2.2+pt27cpu; sys_platform == 'linux' and platform_machine == 'aarch64'",

    # Linux x86 (Docker GPU): CUDA 12.8 versions with +pt27cu128 suffix
    "torch-cluster==1.6.3+pt27cu128; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch-scatter==2.1.2+pt27cu128; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch-sparse==0.6.18+pt27cu128; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch-spline-conv==1.2.2+pt27cu128; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.14.11",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "ipython>=9.9.0",
    "huggingface-hub[cli]>=1.3.1",
    "google-api-python-client>=2.188.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
find-links = [
  "https://data.pyg.org/whl/torch-2.7.0+cpu.html",
  "https://data.pyg.org/whl/torch-2.7.0+cu128.html"
]

environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-gpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' or platform_machine == 'aarch64'" },
]
torchvision = [
    { index = "pytorch-gpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' or platform_machine == 'aarch64'" },
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
    "*/_remote_module_non_scriptable.py",
]
